# portal

./: .project  __init__.py  __main__.py  cli.py  goal.nfo  main.py  portal.py  pyproject.toml
fnx/: __init__.py  chuser.py  cpy.py  portal.py  portal_link.py  prep.py
interface/: __init__.py
interface/ui/: __init__.py  bind.py  cli.py  cpy.py
lib/: __init__.py  lib_cli.py
lib/ANSI/: __init__.py  main.py  markup.py  table.py
old/: __main__.py  bug.cat  cli.py  portal.py  test.py  test.txt  tst
old/.bash/: 00_bashrc.bashrc  00_bashrc.bashrc.t  10_includes.bashrc  20_shopt.bashrc  30_functions.bashrc  31_functions_history.bashrc  32_functions_colors.bashrc  34_functions_extract.bashrc  50_aliases.bashrc  51_aliases_arco.bashrc  60_exports.bashrc  BODY.bashrc  END.bashrc  (+4 more)
testfolder/: 7750vAx.txt  Authorizing Ableton Live Offline.txt  AutoHotkey2.txt  Dj2weak.txt  GS70_6QD(20161025).txt  GS70_6QD(20161101).txt  Key.txt  MEGA-MASTERKEY(1).txt  MEGA-MASTERKEY(2).txt  MEGA-RECOVERYKEY (3).txt  MEGA-RECOVERYKEY(1).txt  NI_VSTtool_log.txt  NRaas_NoCD Readme.txt  New Text Document.txt  R2RLOG (2).txt  R2RLOG.txt  RSA Animate - Changing Education Paradigms_transcript[ENG].txt  SongenModularErrorLog.txt  Untitled.veg  accounts.txt  allamshemale.veg  birreman.txt  bla.txt  cardan.txt  cheesypickuplines.txt  denna.txt  dust.txt  egbert@egbert.be.login.txt  fail_admin_horror_stories.txt  fb.txt  filpms.txt  flstuff.txt  gegevenskaartje.txt  herkristallisatie pep .txt  installed software.txt  installed.txt  jef nestor.txt  key qus,txt.txt  lenzen.txt  linuxdev.txt  (+26 more)
