[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = ["Hoefkens Jeroen <hoefkens.j@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
subprocess-tee = "^0.3.5"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
