[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = ["Hoefkens Jeroen <hoefkens.j@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
subprocess-tee = "^0.3.5"
click = "^8.0.3"
pylint = "^2.12.2"
click-completion-dyncomplete = "^0.5.2"
click-path = "^0.0.5"
click-pathlib = "^2020.3.13"
click-default-group = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
